# eventus

./: .gitignore  .gitlab-ci.yml  .travis.yaml  .travis.yml  Doxyfile  README.md  eventus.hpp
docs/: annotated.html  classes.html  classeventus_1_1event__queue-members.html  classeventus_1_1event__queue.html  classeventus_1_1handler__info-members.html  classeventus_1_1handler__info.html  classeventus_1_1handler__info_1_1handler__removed.html  eventus_8hpp.html  eventus_8hpp_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  files_0.js  functions_1.js  functions_3.js  pages_0.js  searchdata.js  typedefs_0.js
test/: CMakeLists.txt  any_t.cpp  arguments.cpp  basic.cpp  handlers.cpp  keys.cpp  lazytype.cpp  other.cpp  removal.cpp  test.hpp
